<resources>
    <string name="app_name">Marg Calculator</string>
    <string name="header_title">Marg Corporation Ltd.</string>
    <string name="header_subtitle">margtechno@gmail.com</string>
    <string name="header_desc">Navigation header</string>
    <string name="emi_calculator">EMI Calculator</string>
    <string name="Input">What are you more Scared of, life or death?\n\"EMI\" said as a corporate slave</string>
    <string name="FInput">Don\'t return someone\'s love or time as an EMI</string>
    <string name="bank1">Bank 1</string>
    <string name="bank2">Bank 2</string>
    <string name="Result"> Result</string>
    <string name="amount">Loan Amount</string>
    <string name="dPeriod">Period</string>
    <string name="loan_tenure">Loan Tenure</string>
    <string name="dInterest">Interest Rate</string>
    <string name="interest">Enter Interest Rate</string>
    <string name="rate">Rate</string>
    <string name="year">YR</string>
    <string name="month">MO</string>
    <string name="period">Enter Period</string>
    <string name="cperiod">Period</string>
    <string name="processing_fees">Enter Processing Fees</string>
    <string name="processing_fees_output">Processing Fees</string>
    <string name="fees">Fees</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="compare">Compare</string>
    <string name="share">Share</string>
    <string name="emi_details">EMI Details</string>
    <string name="loan_amount">Enter Loan Amount</string>

    <string name="reducing">Reducing EMI</string>
    <string name="flat">Flat EMI</string>
    <string name="emi_per_month">EMI</string>
    <string name="total_interest">Total Interest</string>
    <string name="total_amount">Total Amount</string>


    <string name="return_interest_calculator">Return/Interest Calculator</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="deposit_amount_input">Enter Deposit Amount</string>
    <string name="interest_frequency">Interest Frequency</string>
    <string name="frequency_prompt">Choose Frequency</string>
    <string-array name="interest_frequency_list">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Half-Yearly</item>
        <item>Yearly</item>
    </string-array>
    <string name="tenure_inmonths">Tenure(in Months)</string>
    <string name="tenure_input">Enter Tenure</string>
    <string name="tenure">Tenure</string>
    <string name="maturity_amount">Maturity Amount</string>
    <string name="interest_earned">Interest Earned</string>
    <string name="recurring_amount">Recurring Amount</string>
    <string name="recurring_amount_input">Enter Recurring Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="fd">Fixed Deposit</string>
    <string name="rd">Recurring Deposit</string>
</resources>
